# pong

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  justfile  main.tf
._github/workflows/: deploy.yml
src/: client_event.rs  game.rs  handlers.rs  main.rs  player.rs  pong.rs  templates.rs
templates/: game.html  hello.html  index.html
