[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
env_logger = "0.10.1"
futures-util = "0.3.29"
lazy_static = "1.4.0"
log = "0.4.20"
nalgebra = "0.32.3"
rand = "0.8.5"
rapier2d = "0.17.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
warp = "0.3.6"
